--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Service\ApiTmdbHandler:
+        arguments:
+            $api_uri: '%env(API_URL)%'
+            $api_key: '%env(API_KEY)%'
+            $api_token: '%env(API_TOKEN)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
