--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,9 +20,13 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Service\Manager\GenderManager:
+    App\Service\Manager\FilmManager:
+
     App\Service\ApiTmdbHandler:
         arguments:
-            $api_uri: '%env(API_URL)%'
+            $api_uri: '%env(API_URI)%'
+            $api_id: '%env(API_ID)%'
             $api_key: '%env(API_KEY)%'
             $api_token: '%env(API_TOKEN)%'
 
