add styles + working ajax

--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ API_URI="https://api.themoviedb.org/3/"
 API_ID=
 API_KEY=
 API_TOKEN=
+API_IMAGES_PATH="https://image.tmdb.org/t/p/"
 ###< TMDB Rest-api ###
 
 ###> doctrine/doctrine-bundle ###
